@@ -386,6 +386,8 @@ ldapdb_lookup(const char *zone, const char *name, void *dbdata,
 	      dns_sdblookup_t *lookup, dns_clientinfomethods_t *methods,
 	      dns_clientinfo_t *clientinfo)
 {
+	UNUSED(methods);
+	UNUSED(clientinfo);
 	return (ldapdb_search(zone, name, dbdata, lookup, NULL, NULL));
 }
 #else
@@ -661,7 +663,8 @@ static dns_sdbmethods_t ldapdb_methods = {
 	NULL, /* authority */
 	ldapdb_allnodes,
 	ldapdb_create,
-	ldapdb_destroy
+	ldapdb_destroy,
+	NULL /* lookup2 */
 };
 
 /* Wrapper around dns_sdb_register() */
